Connection string removed from appsettings.json

--- a/HouseRentingSystem/appsettings.json
+++ b/HouseRentingSystem/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "ApplicationDbContextConnection": "Server=(localdb)\\mssqllocaldb;Database=HouseRentingSystem;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
